# pydantic-dto

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
exemples/: api_dto_from_pydantic.md
src/pydantic_dto/: dto_model.py
