[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-dto"
version = "0.1.0"
description = "Pydantic DTO decorators and helpers"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = 'MIT'
license-files = ['LICENSE']
authors = [
    { name = "Kostia Tarnashynskyi", email = "kostia.tarnashynskyi@gmail.com"}
]
keywords = ["dto", "pydantic", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    'Programming Language :: Python :: 3',
    "Operating System :: OS Independent",
    "Typing :: Typed",
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    "pydantic>=2.11.7",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "bump2version>=1.0.1",
    "build>=1.3.0",
]
test = [
    "pytest>=8.4.1",
]
[project.urls]
homepage = "https://github.com/kostia-tarnashynskyi/pydantic-dto"
repository = "https://github.com/kostia-tarnashynskyi/pydantic-dto"
